--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-body {
+body 
+{
   width: 100%;
   height: 100%;
   margin: 0%;
 }
 
-#wrapper {
+#wrapper /*两栏类型的页面*/
+{
   display: flex;
   flex-direction: row;
   min-height: 99vh;
 }
 
-#borderNavigationBar {
+#borderNavigationBar /*边栏样式*/
+{
   border: 1px black solid;
   width: 20%;
   display: flex;
@@ -18,7 +21,7 @@ body {
 }
 
 
-.borderTab
+.borderTab/*标签默认样式*/
 {
   border: 1px black solid;
   width: 80%;
@@ -32,16 +35,17 @@ body {
   align-items: center; /* 垂直居中 */
 }
 
-#userTab
+#userTab/*用户标签*/
 {
   width: 85%;
 }
 #userTab:hover
 {
-  background-color: transparent;
+  background-color: transparent;/*用户标签设为透明，覆盖borderTab类默认的hover伪类*/
 }
 
-#main {
+#main 
+{
   border: 1px black solid;
   width: 80%; /* 调整宽度以适应导航栏，假设总宽度减去导航栏宽度 */
   margin: 1.5%;
@@ -49,14 +53,16 @@ body {
   flex-direction: column; /* 设置垂直方向布局 */
 }
 
-#navigationBar {
+#navigationBar 
+{
   border: 1px black solid;
   margin: 1%;
   width: auto;
   height: 2rem;
 }
 
-#content {
+#content 
+{
   border: 1px black solid;
   margin: 1%;
   /* width: auto; 可以移除，因为默认就是auto */
@@ -75,6 +81,7 @@ body {
   margin:2% auto;
   padding:1% 2%;
 }
+
 .headerBox {
   display: flex; /* 使用Flex布局来排列标题和按钮 */
   justify-content: space-between; /* 在容器两端对齐项目，中间留有空白 */
@@ -93,7 +100,8 @@ body {
   padding: 1%;
 }
 
-.button {
+.button /*默认按钮样式*/
+{
   background-color:rgba(236, 236, 236, 0);
   font-size: 0.9em;
   border: 1px black solid;
@@ -112,16 +120,19 @@ body {
   margin-left: auto;
   margin-right: 10%;
 }
+
 #generateMultiplication
 {
   margin-bottom: 6%;
 }
-#scoreInput
+
+.contentInput/*输入框样式*/
 {
   border: 1px black solid;
   width: 12.5%;
 }
-.contentInput:focus
+
+.contentInput:focus/*取消选择框高亮*/
 {
   outline: none;
 }
@@ -130,6 +141,7 @@ body {
 {
   background-color:rgba(236, 236, 236, 50);
 }
+
 .borderTab:active,.button:active
 {
   background-color:rgba(236, 236, 236, 0);
