简单完善基本信息

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body
   display: flex; /* 添加Flex布局 */
   flex-direction: column; /* 设置垂直方向布局 */
   overflow-y: auto;
+  position: relative;
 }
 
 .work
@@ -143,4 +144,25 @@ body
 .borderTab:active,.button:active
 {
   background-color:rgba(236, 236, 236, 0);
+}
+
+#draggable {
+  position: absolute;
+  right: 0; /* 将其定位在容器的右侧 */
+  bottom: 0; /* 将其定位在容器的底部 */
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  cursor: move;
+  /* 可选：增加边框使其更明显 */
+  border: 2px solid black;
+  /* 可选：圆角效果 */
+  border-radius: 10px;
+}
+
+#player1
+{
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
 }
