--- a/style.css
+++ b/style.css
@@ -12,28 +12,6 @@ body
   min-height: 99vh;
 }
 
-#borderNavigationBar /*边栏样式*/
-{
-  border: 1px black solid;
-  width: 20%;
-  display: flex;
-  flex-direction: column;
-}
-
-
-.borderTab/*标签默认样式*/
-{
-  border: 1px black solid;
-  width: 80%;
-  height: 2rem;
-  margin: 10% auto; /* 简化上下左右外边距设置 */
-  font-size: 0.9em;
-  border-radius: 2.8%;
-  display: flex; /* 添加Flexbox布局 */
-  justify-content: center; /* 水平居中 */
-  align-items: center; /* 垂直居中 */
-}
-
 #userTab/*用户标签*/
 {
   width: 85%;
@@ -45,16 +23,18 @@ body
 
 #main 
 {
-  border: 1px black solid;
+  background-color: rgb(247, 248, 252);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 2.3em; 
   width: 80%; /* 调整宽度以适应导航栏，假设总宽度减去导航栏宽度 */
   margin: 1.5%;
   display: flex; /* 添加Flex布局 */
   flex-direction: column; /* 设置垂直方向布局 */
 }
 
+
 #navigationBar 
 {
-  border: 1px black solid;
   margin: 1%;
   width: auto;
   height: 2rem;
@@ -62,30 +42,112 @@ body
 
 #content 
 {
-  border: 1px black solid;
   margin: 1%;
   flex-grow: 1;
   display: flex; /* 添加Flex布局 */
   flex-direction: column; /* 设置垂直方向布局 */
-  overflow-y: auto;
+
   position: relative;
 }
 
-.work
+.button /*默认按钮样式*/
 {
-  border: 1px black solid;
-  width: 90%;
-  margin:2% auto;
-  padding:1% 2%;
+  border:none;
+  box-shadow: 0px 2.1px 3px rgba(0, 0, 0, 0.6);
+  color:white;
+  background-color: rgb(98, 84, 220);
+  font-size: 0.9em;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: bottom;
+}
+.button:hover
+{
+  background-color: rgba(98, 84, 220, 0.9);
+}
+.button:active
+{
+  background-color: rgb(98, 84, 220);
 }
 
+.buttonBox1
+{
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: 10%;
+}
+
+#borderNavigationBar /*边栏样式*/
+{
+  border-radius:0% 1.3% 1.3% 0%; 
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+}
+.borderTab/*标签默认样式*/
+{
+  border: 0.5px rgba(0, 0, 0, 0.086) solid;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  border-bottom-color: transparent; 
+  border-radius: 0.45em;
+  width: 80%;
+  height: 5em;
+  margin: 10% auto; /* 简化上下左右外边距设置 */
+  font-size: 0.9em;
+
+  -webkit-user-select: none; /* Safari, Chrome 和 Opera */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 和 Edge */
+  user-select: none; /* 标准语法 */
+
+  display: flex; /* 添加Flexbox布局 */
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
+}
+.activeTab
+{
+  background-color:rgb(98, 84, 220, 0.05);
+  border:1px rgba(98, 84, 220, 0.5)  solid;
+}
+.borderTab:hover:not(.activeTab)
+{
+  background-color:rgb(98, 84, 220, 0.05);
+}
+
+
+/*作业界面样式*/
+#generateMultiplication
+{
+  margin-bottom: 6%;
+}
+/*输入框样式*/
+.contentInput
+{
+  border: 1px black solid;
+  width: 12.5%;
+}
+.contentInput:focus/*取消选择框高亮*/
+{
+  outline: none;
+}
+.work
+{
+  overflow-y: auto;
+  background-color: white;
+  width: 80%;
+  border-radius: 2em;
+  margin:2% auto;
+  padding:4% 6%;
+}
 .headerBox 
 {
   display: flex; /* 使用Flex布局来排列标题和按钮 */
   justify-content: space-between; /* 在容器两端对齐项目，中间留有空白 */
   align-items: center; /* 垂直居中对齐 */
 }
-
 #multiplicationTable
 {
   font-size: 0.8em;
@@ -98,52 +160,8 @@ body
   padding: 1%;
 }
 
-.button /*默认按钮样式*/
-{
-  background-color:rgba(236, 236, 236, 0);
-  font-size: 0.9em;
-  border: 1px black solid;
-  /* width: 3rem; 这里可能需要调整，取决于实际需求 */
-  height: 1.5rem;
-  border-radius: 6.8%;
-  text-align: center;
-  vertical-align: bottom;
-}
-
-.buttonBox1
-{
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: 10%;
-}
-
-#generateMultiplication
-{
-  margin-bottom: 6%;
-}
-
-.contentInput/*输入框样式*/
-{
-  border: 1px black solid;
-  width: 12.5%;
-}
-
-.contentInput:focus/*取消选择框高亮*/
-{
-  outline: none;
-}
-
-.borderTab:hover:not(.activeTab),.button:hover
-{
-  background-color:rgba(236, 236, 236, 60);
-}
-
-.button:active
-{
-  background-color:rgba(236, 236, 236, 0);
-}
-
+/*个人介绍界面样式*/
+/*矩形作业的样式*/
 #draggable {
   position: absolute;
   right: 0; /* 将其定位在容器的右侧 */
@@ -152,18 +170,16 @@ body
   height: 100px;
   background-color: red;
   cursor: move;
-  /* 可选：增加边框使其更明显 */
-  border: 2px solid black;
-  /* 可选：圆角效果 */
   border-radius: 10px;
 }
 
-#player1
+#player1/*播放器样式*/
 {
   position: absolute;
   right: 0.5rem;
   top: 0.5rem;
 }
+
 #profilePicture
 {
   border-radius: 50%;
@@ -171,7 +187,6 @@ body
   height: 8rem;
   margin: 0rem 1.2rem 0rem 0rem;
 }
-
 .infoBox {
   display: flex;
   align-items: center; /* 垂直居中 */
@@ -213,7 +228,6 @@ body
 {
   padding: 0.15rem;
   font-weight:lighter;
-  border: 1px black solid;
 }
 #selfIntroduction
 {
@@ -234,11 +248,5 @@ body
 #infoTitle
 {
   padding: 0.15rem;
-  border: 1px black solid;
 }
 
-
-.activeTab
-{
-  background-color:rgba(216, 216, 216, 15);
-}
