--- a/home/CSS/content.css
+++ b/home/CSS/content.css
@@ -1,26 +1,117 @@
 #wrapper{
     display: flex;
     flex-direction: row;
+    position: relative;
+    align-items: start;
+    top: 4.5rem;
 }
+
 .card{
     position: relative;
-    top: 4rem;
-    max-width: 85%;
+    max-width: 95%;
     margin: 0 auto;
+    padding: 4px;
+
+}
+
+.card-style{
     border:1px solid rgba(0, 0, 0, 0.1) ;
     background-color: rgb(247, 248, 252);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 2rem;
+}
+.card-style:hover{
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
 }
 #card-content{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    width: 60%;
+    gap: 1.5rem;
+    margin: 0,auto;
+    width: 55%;
+    overflow-y: auto;
 }
+
+.content-titleStyle{
+    font-size: 2rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+}
+
+.content-titleStyle:hover{
+    border-bottom: 1px solid rgb(98, 84, 220);
+    color: rgb(98, 84, 220);
+}
+
 #card-selfInfo{
-    width: 25%;
-    margin-left: 0;
+    position: sticky;
+    top: 4rem;
+    width: 250px;
+    margin: 0 auto auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-@media screen and (max-width: 800px) {
+#card-basicInfo{
+    width: 100%;
+    height: 17rem;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#card-basicInfo #card-selfInfoImg{
+    margin: 1rem auto 0 auto;
+    border: 3px solid white;
+    outline: 1px solid rgba(0, 0, 0, 0.1);
+}
+#card-basicInfo #card-surferName{
+    font-weight: normal;
+}
+#card-basicInfo #card-webBox{
+    width: 250px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.card-boxStyle{
+    padding: 10px 0;
+    margin: 0 5px;
+}
+.card-boxStyle:hover{
+    width: 30px;
+    height: 30px;
+}
+#card-selfIntroduction #card-menu{
+    width: 250px;
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem auto;
+}
+#card-menu .card-menuLi{
+    margin: 0 15px;
+    padding: 8px 8px 4px 8px;
+    border-radius: 50%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+}
+#activeMenuLi, #card-menu .card-menuLi:hover:not(#activeMenu){
+    background-color:rgb(98, 84, 220, 0.05);
+    border:0.1px rgba(98, 84, 220, 0.5)  solid
+}
+#card-selfIntroduction #introduceText{
+    margin: 0 auto 16px auto;
+    padding: 1rem;
+    text-align: left;
+    font-size: large;
+    width: 100%;
+}
+@media screen and (max-width: 820px) {
     #card-selfInfo {
         display: none;
     }
